// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optional criteria have sane fallbacks 1`] = `
Object {
  "criteria": Object {
    "negativeUaWithin90Days": Object {
      "latestUaDates": Array [],
      "latestUaResults": Array [],
    },
    "noFelonyWithin24Months": Object {
      "latestFelonyConvictions": Array [],
    },
    "noViolentMisdemeanorWithin12Months": Object {
      "latestViolentConvictions": Array [],
    },
    "usIdIncomeVerifiedWithin3Months": Object {
      "incomeVerifiedDate": 2022-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowModerateForXDays": Object {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
    "usIdNoActiveNco": Object {
      "activeNco": false,
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": Object {
    "clientName": "Betty Rubble",
  },
  "stateCode": "US_ID",
}
`;

exports[`transform record 1`] = `
Object {
  "criteria": Object {
    "negativeUaWithin90Days": Object {
      "latestUaDates": Array [
        2022-01-03T00:00:00.000Z,
      ],
      "latestUaResults": Array [
        false,
      ],
    },
    "noFelonyWithin24Months": Object {
      "latestFelonyConvictions": Array [
        2022-01-05T00:00:00.000Z,
        2022-05-28T00:00:00.000Z,
      ],
    },
    "noViolentMisdemeanorWithin12Months": Object {
      "latestViolentConvictions": Array [
        2022-03-09T00:00:00.000Z,
      ],
    },
    "usIdIncomeVerifiedWithin3Months": Object {
      "incomeVerifiedDate": 2022-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowModerateForXDays": Object {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
    "usIdNoActiveNco": Object {
      "activeNco": true,
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": Object {
    "clientName": "Betty Rubble",
  },
  "stateCode": "US_ID",
}
`;
